# winmtp

./: .gitignore  Cargo.toml  LICENSE.md  README.md
examples/: list-devices.rs  write-file-with-progress copy.rs  write-file.rs
src/: error.rs  lib.rs  provider.rs  utils.rs
src/device/: content.rs  device_values.rs  mod.rs
src/io/: mod.rs
src/object/: mod.rs  object_id.rs  object_iterator.rs  object_type.rs
tests/: file_access.rs
