[package]
name = "winmtp"
version = "0.2.0"
edition = "2021"
authors = ["daladim"]
description = "Bindings over Windows MTP API"
repository = "https://github.com/daladim/winmtp"
documentation = "https://docs.rs/winmtp"
license = "MIT"
readme = "README.md"
keywords = ["MTP", "API", "windows", "android", "file"]
categories = ["api-bindings", "multimedia", "filesystem", "hardware-support"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
widestring = "1.0"
windows = { version = "0.44", features = [
    "Win32_System_Com",
    "Win32_Devices_PortableDevices",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Storage_FileSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_Foundation",
]}
